--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
   <title>أداة التحقق من نشاطك التجاري على Google</title>
-  <script src="config.js"></script>
+  <script src="main.js"></script>
   <style>
     body { font-family: Tahoma, sans-serif; direction: rtl; padding: 20px; background: #f1f3f4; }
     .form { background: white; padding: 20px; border-radius: 10px; max-width: 700px; margin: auto; box-shadow: 0 0 10px #ccc; }
@@ -15,30 +16,17 @@
 </head>
 <body>
 
-  <script>
-    if (window.location.pathname === "/" && window.location.hash.includes("access_token")) {
-      const newUrl = "https://mrcleancare.github.io/gmb-verifier/" + window.location.hash;
-      window.location.replace(newUrl);
-    }
-  </script>
-
   <div class="form">
     <h2>أداة التحقق من ملف نشاطك التجاري</h2>
 
     <label>اسم النشاط:</label>
     <input type="text" id="businessName" value="شركة عالم النظافة للخدمات البيئية">
 
-    <label>الفئة:</label>
-    <input type="text" id="category" value="شركة تنظيف">
-
     <label>العنوان:</label>
     <textarea id="address">جدة، حي البشائر، شارع أبي فراس الحمداني</textarea>
 
     <label>الإحداثيات (latitude, longitude):</label>
     <input type="text" id="coordinates" value="21.7897761, 39.1821582">
-
-    <label>رقم الجوال:</label>
-    <input type="text" id="phone" value="+966559061065">
 
     <label>رابط الموقع:</label>
     <input type="text" id="website" value="https://m-clean.net">
@@ -50,43 +38,5 @@
 
     <div id="resultBox" class="result"></div>
   </div>
-
-  <script>
-    function validateProfile() {
-      window.messages = [];
-      window.passed = true;
-
-      window.name = document.getElementById("businessName").value;
-      const coordinates = document.getElementById("coordinates").value;
-      const latLng = coordinates.split(',');
-      const lat = parseFloat(latLng[0]);
-      const lng = parseFloat(latLng[1]);
-
-      const token = getAccessTokenFromUrl();
-      if (token) {
-        checkSiteInSearchConsoleOAuth(token, SEARCH_CONSOLE_SITE, messages, passed, (msgs1, status1) => {
-          verifyBusinessPlace(name, lat, lng, msgs1, status1, (msgs2, status2) => {
-            const resultBox = document.getElementById("resultBox");
-            resultBox.className = 'result ' + (status2 ? 'success' : 'error');
-            resultBox.innerHTML = `<ul>${msgs2.map(msg => `<li>${msg}</li>`).join('')}</ul>`;
-          });
-        });
-      } else {
-        messages.push("🔐 لم يتم تسجيل الدخول بعد. اضغط لتسجيل الدخول.");
-        const resultBox = document.getElementById("resultBox");
-        resultBox.innerHTML = "";
-        const btn = document.createElement("button");
-        btn.innerText = "تسجيل الدخول إلى Google";
-        btn.onclick = () => authenticateWithGoogle();
-        resultBox.appendChild(btn);
-      }
-    }
-
-    window.onload = function () {
-      if (window.location.hash.includes("access_token")) {
-        setTimeout(validateProfile, 500);
-      }
-    }
-  </script>
 </body>
 </html>
